--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -48,7 +48,7 @@
       href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap"
       rel="stylesheet"
     />
-    <title>Vikas Prajapati</title>
+    <title>Vikas Prajapati Portfollio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
